--- a/packages/cmr-client/package.json
+++ b/packages/cmr-client/package.json
@@ -39,5 +39,8 @@
     "lodash": "^4.17.15",
     "public-ip": "^3.0.0",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "@types/xml2js": "^0.4.5"
   }
 }
